# Robert

./: .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  COMMUNITY.md  CONTRIBUTING.md  README.md  README_EN.md  README_ZH.md  SECURITY.md  SUPPORT.md  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  documentation.yml  feature.yml
.github/workflows/: ci.yml  dco.yml  release.yml
docs/: agent-install.md  concepts.md  development.md  guides.md  human-install.md  reference.md
docs/concepts/: architecture.md  routes.md  trust-model.md  worker-contract.md  workstreams.md
tests/: support.py  test_acceptance_suite.py  test_board.py  test_board_control_integration.py  test_cli.py  test_config_and_schema.py  test_controlled_e2e_acceptance.py  test_daemon.py  test_diagnostics.py  test_discovery_authorization.py  test_distribution.py  test_docs.py  test_github_event_matrix.py  test_init_and_doctor.py  test_live_discovery_acceptance.py  test_live_worker_acceptance.py  test_live_worktree_acceptance.py  test_loop_engine.py  test_migration.py  test_openclaw.py  test_operational_commands.py  test_package_layout.py  test_paths.py  test_production_write_canary.py  test_project_memory.py  test_public_surface.py  test_publish_dedupe_acceptance.py  test_redaction.py  test_route_config.py  test_routing.py  test_run_once.py  test_runtime_knowledge.py  test_service.py  test_skills.py  test_web_security.py  test_work_items.py  test_workbench.py  test_worker_adapter_config.py  test_worker_protocol.py  test_workflow_matrix.py  (+2 more)
(+123 files in other folders)
